refactor: move scripts to own folder

--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,6 @@
     <h1 id="onOffText">ON</h1>
     <button id="onOffButton"></button>
     <input id="secondsInput" type="number" value="2" />
-    <script src="popup.js"></script>
+    <script src="scripts/popup.js"></script>
   </body>
 </html>
