--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,12 @@
   <head>
     <link rel="stylesheet" href="button.css" />
   </head>
+  <script src="popup.js"></script>
   <body>
     <h1>Twitter Timeout</h1>
-    <h1 id="onOffText">ON</h1>
-    <button id="onOffButton"></button>
-    <input id="secondsInput" type="number" value="2" />
-    <script src="scripts/popup.js"></script>
+    <label class="switch">
+      <input type="checkbox" id="onoffbutton" />
+      <span class="slider round"></span>
+    </label>
   </body>
 </html>
